[gd_scene load_steps=3 format=3 uid="uid://bq8cy6u6t1pck"]

[ext_resource type="PackedScene" uid="uid://bm8gdov5dr8pg" path="res://scenes/components/component/component.tscn" id="1_i84js"]
[ext_resource type="Script" uid="uid://c51hxk8xb5bog" path="res://scenes/components/chaos_value_enlarger/chaos_value_enlarger_component.gd" id="2_81x7s"]

[node name="ChaosValueEnlargerComponent" instance=ExtResource("1_i84js")]
script = ExtResource("2_81x7s")
enlarge_chaos_value_time = 3.0
chaos_enlarge_value = 1

[node name="Node" type="Node" parent="." index="0"]

[node name="EnlargeChaosValueTimer" type="Timer" parent="Node" index="0"]
unique_name_in_owner = true

[connection signal="timeout" from="Node/EnlargeChaosValueTimer" to="." method="_on_enlarge_chaos_value_timer_timeout"]
